# pythonProject7

./: .gitignore  README.MD  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py  abstract_api.py  abstract_storage.py  filters.py  hh_api.py  json_saver.py  sample.py  vacancy.py
tests/: test_api.py  test_storage.py  test_vacancy.py
